--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
           <input type="text" name="task-name" placeholder="Enter task name" />
         </div>
         <div class="form-group">
-          <select name = "task-type" class="select-dropdown">
+          <select name="task-type" class="select-dropdown">
             <option value="" disabled selected>Pick a task type</option>
             <option value="Print">Print</option>
             <option value="Web">Web</option>
             <option value="Mobile">Mobile</option>
           </select>
-          </div>
-          <div class="form-group">
+        </div>
+        <div class="form-group">
           <button class="btn" id="save-task" type="submit">Add Task</button>
         </div>
       </form>
@@ -34,6 +34,17 @@
         <ul class="task-list" id="tasks-to-do">
           <li class="task-item">A task is going to be added soon!</li>
         </ul>
+      </section>
+      <!-- Tasks In Progress -->
+      <section class="task-list-wrapper">
+        <h2 class="list-title">Tasks In Progress</h2>
+        <ul class="task-list" id="tasks-in-progress"></ul>
+      </section>
+
+      <!-- Tasks Completed -->
+      <section class="task-list-wrapper">
+        <h2 class="list-title">Tasks Completed</h2>
+        <ul class="task-list" id="tasks-completed"></ul>
       </section>
     </main>
     <footer>&copy;2020 by Taskinator</footer>
